build: cover .css files in editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{*.js,*.json,*.ts,*.tsx,*.yaml,*.yml}]
+[{*.css,*.js,*.json,*.ts,*.tsx,*.yaml,*.yml}]
 indent_size = 2
 
 [*.md]
