ci: build awly-data-plugin during each CI run
so we can avoid checking in the artifacts bloating the repo any more

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+      - name: Build awly-data-plugin
+        run: yarn make-plugins
       - name: Build website
         run: yarn build
 
