--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -20,5 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+      - name: Build awly-data-plugin
+        run: yarn make-plugins
       - name: Test build website
         run: yarn build
