--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "make-plugins": "tsc --target esnext --module none --esModuleInterop true --moduleResolution node ./src/plugins/awly-data-plugin/index.ts"
+    "build-helpers": "cd scripts/asmdb && go build ./gen-asmdb-data.go",
+    "make-plugins": "tsc --target esnext --module none --esModuleInterop true --moduleResolution node ./src/plugins/**/index.ts"
   },
   "dependencies": {
     "@docusaurus/core": "2.2.0",
