--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdx-js/react": "^1.6.22",
     "@types/glob": "^8.0.0",
     "@types/js-yaml": "^4.0.5",
+    "antd": "^5.0.7",
     "clsx": "^1.2.1",
     "glob": "^8.0.3",
     "glob-promise": "^5.0.0",
