--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "clsx": "^1.2.1",
     "glob": "^8.0.3",
     "glob-promise": "^5.0.0",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
