--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "target": "ESNext",
+    "useDefineForClassFields": true,
   }
 }
