--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "make-plugins": "tsc --target esnext --module none --esModuleInterop true --moduleResolution node ./src/plugins/**/index.ts"
   },
   "dependencies": {
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
+    "@docusaurus/core": "^2.4.0",
+    "@docusaurus/preset-classic": "^2.4.0",
     "@mdx-js/react": "^1.6.22",
     "@types/glob": "^8.0.0",
     "@types/js-yaml": "^4.0.5",
@@ -34,7 +34,7 @@
     "yaml": "^2.1.3"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0",
+    "@docusaurus/module-type-aliases": "^2.4.0",
     "@tsconfig/docusaurus": "^1.0.5",
     "typescript": "^4.7.4"
   },
