feat(data): update llvm

--- a/src/data/01-toolchain/llvm.yml
+++ b/src/data/01-toolchain/llvm.yml
@@ -5,7 +5,7 @@ portingEfforts:
   - authors: ['loongson', 'xen0n']
     desc: ''
     link: ''
-    supportStatus: WaitingRelease
+    supportStatus: Released
     releasedSinceVersion: '16.0.0'
     goodSinceVersion: '16.0.0'
     quality: OnPar
