--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@mdx-js/react": "^1.6.22",
     "@types/glob": "^8.0.0",
     "@types/js-yaml": "^4.0.5",
+    "@types/lodash": "^4.14.192",
     "antd": "^5.0.7",
     "clsx": "^1.2.1",
     "glob": "^8.0.3",
     "glob-promise": "^5.0.0",
+    "lodash": "^4.17.21",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "prism-react-renderer": "^1.3.5",
