feat(data): update go
Now we know that a lot is missing, fortunately things are being worked
on.

--- a/src/data/02-programming-languages/go.yml
+++ b/src/data/02-programming-languages/go.yml
@@ -2,10 +2,10 @@ name: 'Go'
 homepageURL: 'https://go.dev'
 repoURL: 'https://github.com/golang/go'
 portingEfforts:
-  - authors: ['loongson']
+  - authors: ['loongson', 'xen0n']
     desc: ''
     link: ''
     supportStatus: Released
     releasedSinceVersion: '1.19'
-    goodSinceVersion: '1.19'
+    goodSinceVersion: '1.21'
     quality: OnPar
