feat(data): add CLFS and Fedora porting efforts

--- a/src/data/porters.yml
+++ b/src/data/porters.yml
@@ -19,6 +19,12 @@ shipujin:
   url: ''
   githubUsername: shipujin
   giteeUsername: ''
+sunhaiyong1978:
+  name: Sun Haiyong
+  kind: Loongson
+  url: ''
+  githubUsername: sunhaiyong1978
+  giteeUsername: ''
 xen0n:
   name: WANG Xuerui
   kind: Community
