--- a/src/data/02-programming-languages/rust.yml
+++ b/src/data/02-programming-languages/rust.yml
@@ -5,7 +5,7 @@ portingEfforts:
   - authors: ['loongson']
     desc: ''
     link: ''
-    supportStatus: UnderReview
-    releasedSinceVersion: ''
-    goodSinceVersion: ''
+    supportStatus: WaitingRelease
+    releasedSinceVersion: '1.71.0'
+    goodSinceVersion: '1.71.0'
     quality: OnPar
