feat(data): Loong Arch Linux has had a homepage for a while

--- a/src/data/07-distros/arch.yml
+++ b/src/data/07-distros/arch.yml
@@ -1,5 +1,5 @@
 name: 'Loong Arch Linux'
-homepageURL: ''
+homepageURL: 'https://loongarchlinux.org'
 repoURL: 'https://github.com/loongarchlinux'
 portingEfforts:
   - authors: ['yetist']
