--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/core": "^2.4.3",
     "@docusaurus/plugin-client-redirects": "^2.4.3",
     "@docusaurus/preset-classic": "^2.4.3",
+    "@jsdevtools/rehype-url-inspector": "^2.0.2",
     "@mdx-js/react": "^1.6.22",
     "@types/glob": "^8.0.0",
     "@types/js-yaml": "^4.0.5",
