--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -22,6 +22,9 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: '>=1.19.0'
+          check-latest: true
+          cache-dependency-path: |
+            scripts/asmdb/go.sum
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
