--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.0.0",
     "@docusaurus/tsconfig": "^3.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "update-browserslist-db": "^1.0.13"
   },
   "browserslist": {
     "production": [
