--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/core": "^3.0.1",
     "@docusaurus/plugin-client-redirects": "^3.0.1",
     "@docusaurus/preset-classic": "^3.0.1",
+    "@easyops-cn/docusaurus-search-local": "^0.38.1",
     "@jsdevtools/rehype-url-inspector": "^2.0.2",
     "@mdx-js/react": "^3.0.0",
     "@types/glob": "^8.0.0",
