docs(newsletter): this-week-in-loongarch-31: freebsd

--- a/src/data/03-kernel/freebsd.yml
+++ b/src/data/03-kernel/freebsd.yml
@@ -1,4 +1,11 @@
 name: 'FreeBSD'
 homepageURL: 'https://www.freebsd.org'
 repoURL: 'https://cgit.freebsd.org'
-portingEfforts: []
+portingEfforts:
+  - authors: ['yushanwei']
+    desc: ''
+    link: 'https://gitee.com/lauosc/freebsd'
+    supportStatus: WIP
+    releasedSinceVersion: ''
+    goodSinceVersion: ''
+    quality: NeedsCleanup
