--- a/src/data/porters.yml
+++ b/src/data/porters.yml
@@ -49,3 +49,9 @@ yetist:
   url: ''
   githubUsername: yetist
   giteeUsername: ''
+yushanwei:
+  name: yu shan wei
+  kind: Community
+  url: ''
+  githubUsername: ''
+  giteeUsername: yushanwei
