Add porter information.

--- a/src/data/porters.yml
+++ b/src/data/porters.yml
@@ -79,3 +79,9 @@ yushanwei:
   url: ''
   githubUsername: ''
   giteeUsername: yushanwei
+yxd:
+  name: YANG Xudong
+  kind: Community
+  url: 'https://twitter.com/_yxd_'
+  githubUsername: ''
+  giteeUsername: ''
