--- a/src/data/02-programming-languages/zig.yml
+++ b/src/data/02-programming-languages/zig.yml
@@ -2,7 +2,7 @@ name: 'zig'
 homepageURL: 'https://ziglang.org/'
 repoURL: 'https://github.com/ziglang/zig'
 portingEfforts:
-  - authors: ['community']
+  - authors: ['yxd']
     desc: '正在进行 zig-bootstrap 的支持，已经能 bootstrap 一个不含 libc 支持的 stage3 zig'
     link: 'https://github.com/ziglang/zig-bootstrap/issues/166'
     supportStatus: WIP
