--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-# plugin build artifacts
-/src/**/*.js
+# Yarn Modern files
+# Zero-Install consumes too much space (~340MiB right now) so it is
+# explicitly not used
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # Dependencies
 /node_modules
