--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 20
           cache: yarn
-      - uses: actions/setup-go@v4
+      - uses: actions/setup-go@v5
         with:
           go-version: '>=1.21.0'
           check-latest: true
@@ -32,14 +32,14 @@ jobs:
       - name: Build website
         run: yarn build
 
-      - name: Upload pages artifacts
+      - name: Upload pages artifacts (Main branch)
         if: ${{ github.ref == 'refs/heads/main' }}
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
           path: './build/'
           name: 'gh-pages-${{github.sha}}'
 
-      - name: Upload pages artifacts
+      - name: Upload pages artifacts (PR)
         if: ${{ github.ref != 'refs/heads/main' }}
         uses: actions/upload-artifact@v4
         with:
@@ -54,12 +54,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_upload
     permissions:
+      actions: read
       contents: read
       pages: write
       id-token: write
     steps:
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v1
         with:
