--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-      - name: Enable Corepack
+      - name: Enable Corepack for Yarn Modern
         run: corepack enable
       - uses: actions/setup-node@v4
         with:
@@ -54,14 +54,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_upload
     permissions:
-      actions: read
       contents: read
       pages: write
       id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deploy.outputs.page_url }}
     steps:
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Deploy to GitHub Pages
+        id: deploy
         uses: actions/deploy-pages@v4
         with:
           artifact_name: 'gh-pages-${{github.sha}}'
