feat(data): update openwrt
The port is merged, and packages are being built.

See: https://downloads.openwrt.org/snapshots/targets/loongarch64/generic/

--- a/src/data/07-distros/openwrt.yml
+++ b/src/data/07-distros/openwrt.yml
@@ -5,7 +5,7 @@ portingEfforts:
   - authors: ['hackpascal']
     desc: ''
     link: 'https://github.com/openwrt/openwrt/pull/14357'
-    supportStatus: UnderReview
+    supportStatus: WaitingRelease
     releasedSinceVersion: ''
     goodSinceVersion: ''
     quality: OnPar
