--- a/src/data/06-jit-runtimes/jsc.yml
+++ b/src/data/06-jit-runtimes/jsc.yml
@@ -3,7 +3,7 @@ homepageURL: 'https://webkit.org/'
 repoURL: 'https://github.com/WebKit/WebKit'
 portingEfforts:
   - authors: ['loongson']
-    desc: 'WebKit 的 Javascript 引擎，目前在 LoongArch 上能用，但没有 JIT 支持'
+    desc: 'WebKit 的 JavaScript 引擎，目前在 LoongArch 上能用，但没有 JIT 支持'
     link: 'https://github.com/WebKit/WebKit/pull/3908'
     supportStatus: WIP
     releasedSinceVersion: 'WebKit-7615.1.6, webkitgtk-2.39.1'
