feat(data): show recommended minimum versions for anolisos, deepin and openeuler

--- a/src/data/07-distros/anolisos.yml
+++ b/src/data/07-distros/anolisos.yml
@@ -7,5 +7,5 @@ portingEfforts:
     link: ''
     supportStatus: Released
     releasedSinceVersion: '23.1'
-    goodSinceVersion: ''
+    goodSinceVersion: '23.1'
     quality: OnPar
