feat(data): mark openeuler as released
See: https://www.openeuler.org/zh/interaction/summit-list/2403-version-release/

--- a/src/data/07-distros/openeuler.yml
+++ b/src/data/07-distros/openeuler.yml
@@ -5,7 +5,7 @@ portingEfforts:
   - authors: []
     desc: ''
     link: ''
-    supportStatus: WaitingRelease
+    supportStatus: Released
     releasedSinceVersion: '24.03'
     goodSinceVersion: '24.03'
     quality: OnPar
