--- a/src/data/porters.yml
+++ b/src/data/porters.yml
@@ -2,7 +2,7 @@
 # Please keep the keys alphabetically sorted.
 
 alexrp:
-  name:
+  name: Alex Rønne Petersen
   kind: Community
   url: ''
   githubUsername: alexrp
