--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@docusaurus/preset-classic": "^3.5.2",
     "@docusaurus/theme-common": "^3.5.2",
     "@docusaurus/theme-mermaid": "^3.5.2",
+    "@docusaurus/types": "^3.5.2",
     "@easyops-cn/docusaurus-search-local": "^0.44.6",
     "@jsdevtools/rehype-url-inspector": "^2.0.2",
     "@mdx-js/react": "^3.0.1",
