--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@docusaurus/plugin-content-blog": "^3.5.2",
     "@docusaurus/plugin-content-docs": "^3.5.2",
     "@docusaurus/preset-classic": "^3.5.2",
+    "@docusaurus/theme-classic": "^3.5.2",
     "@docusaurus/theme-common": "^3.5.2",
     "@docusaurus/theme-mermaid": "^3.5.2",
     "@docusaurus/types": "^3.5.2",
