--- a/package.json
+++ b/package.json
@@ -54,6 +54,12 @@
     "typescript": "^5.6.3",
     "update-browserslist-db": "^1.1.1"
   },
+  "resolutions": {
+    "@docusaurus/plugin-content-docs": "3.5.2",
+    "@docusaurus/theme-translations": "3.5.2",
+    "@docusaurus/utils-common": "3.5.2",
+    "@docusaurus/utils-validation": "3.5.2"
+  },
   "browserslist": {
     "production": [
       ">0.5%",
