--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.11",
     "@types/react-router-dom": "^5.3.3",
+    "prettier": "^3.3.3",
     "typescript": "^5.6.3",
     "update-browserslist-db": "^1.1.1"
   },
