--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^5.3.4",
     "utility-types": "^3.11.0",
     "yaml": "^2.5.1"
   },
