--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/node": "^22.7.5",
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.11",
+    "@types/react-router-dom": "^5.3.3",
     "typescript": "^5.6.3",
     "update-browserslist-db": "^1.1.1"
   },
