style: format with prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "target": "ESNext",
-    "useDefineForClassFields": true,
+    "useDefineForClassFields": true
   }
 }
