--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/glob": "^8.1.0",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.17.10",
+    "@types/mdast": "^4.0.4",
     "@types/node": "^22.7.5",
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.11",
