--- a/.editorconfig
+++ b/.editorconfig
@@ -9,10 +9,10 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{*.css,*.js,*.json,*.ts,*.tsx,*.yaml,*.yml}]
+[{*.css,*.cjs,*.cts,*.js,*.json,*.mjs,*.mts,*.ts,*.tsx,*.yaml,*.yml}]
 indent_size = 2
 
-[*.md]
+[{*.md,*.mdx}]
 indent_size = 4
 
 [*.go]
