--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,21 @@
 packageExtensions:
+  # https://github.com/facebook/docusaurus/issues/10645
+  '@docusaurus/theme-common@*':
+    dependencies:
+      '@docusaurus/plugin-content-docs': '*'
   '@docusaurus/theme-mermaid@*':
+    dependencies:
+      langium: '*'
     peerDependencies:
       '@docusaurus/theme-common': '*'
+
+  'langium@*':
+    dependencies:
+      '@chevrotain/regexp-to-ast': '*'
+      vscode-jsonrpc: '*'
+      vscode-languageserver-types: '*'
+
+  # https://github.com/esxjs/esx/issues/18
+  'debug@*':
+    dependencies:
+      supports-color: '*'
