--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@docusaurus/core": "3.6.1",
+    "@docusaurus/faster": "3.6.1",
     "@docusaurus/plugin-client-redirects": "3.6.1",
     "@docusaurus/plugin-content-blog": "3.6.1",
     "@docusaurus/plugin-content-docs": "3.6.1",
