build: disable Yarn PnP for now
I've unsuccessfullly tried for well over 2 weeks on this, so instead of
wasting even more time without real articles being written, it's only
more appropriate to admit defeat and go back to `node_modules`...

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,7 @@
+# https://github.com/facebook/docusaurus/issues/10645 seems unsolvable
+# without upstream change, do not let it block the upgrade
+nodeLinker: node-modules
+
 packageExtensions:
   # https://github.com/facebook/docusaurus/issues/10645
   '@docusaurus/theme-common@*':
