--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@types/prismjs": "^1.26.5",
     "@types/react": "^18.3.12",
     "@types/react-router-dom": "^5.3.3",
-    "eslint": "^9.15.0",
+    "eslint": "9.14.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0",
