Add Vincent Li to porters
Signed-off-by: Vincent Li <vincent.mc.li@gmail.com>

--- a/src/data/porters.yml
+++ b/src/data/porters.yml
@@ -91,6 +91,12 @@ sunhaiyong1978:
   url: ''
   githubUsername: sunhaiyong1978
   giteeUsername: ''
+vincentmli:
+  name: Vincent Li
+  kind: Community
+  url: https://github.com/vincentmli
+  githubUsername: vincentmli
+  giteeUsername: vincentmli
 xen0n:
   name: WANG Xuerui
   kind: Community
