fix(data): render "24.10" correctly
Apparently plain `24.10` is a float, which is also problematic for
e.g. Python 3.10...

Fixes: 05a0a21 ("chore(data): mark OpenWrt as released since 24.10")

--- a/src/data/07-distros/openwrt.yml
+++ b/src/data/07-distros/openwrt.yml
@@ -6,6 +6,6 @@ portingEfforts:
     desc: ''
     link: 'https://github.com/openwrt/openwrt/pull/14357'
     supportStatus: Released
-    releasedSinceVersion: 24.10
-    goodSinceVersion: 24.10
+    releasedSinceVersion: '24.10'
+    goodSinceVersion: '24.10'
     quality: OnPar
