feat(data): update OpenJDK status

--- a/src/data/06-jit-runtimes/openjdk.yml
+++ b/src/data/06-jit-runtimes/openjdk.yml
@@ -4,8 +4,8 @@ repoURL: 'https://github.com/openjdk/jdk'
 portingEfforts:
   - authors: ['loongson']
     desc: ''
-    link: ''
+    link: 'https://github.com/loongson/jdk'
     supportStatus: WIP
     releasedSinceVersion: ''
     goodSinceVersion: ''
-    quality: NoCode
+    quality: NeedsCleanup
