--- a/src/data/01-toolchain/picolibc.yml
+++ b/src/data/01-toolchain/picolibc.yml
@@ -5,5 +5,6 @@ portingEfforts:
   - authors: ['flygoat']
     desc: ''
     link: 'https://github.com/picolibc/picolibc/pull/898'
-    supportStatus: WaitingRelease
+    supportStatus: Release
+    releasedSinceVersion: '1.8.9'
     quality: OnPar
