build: bump Yarn to 4.8.1
Yarn automatically formatted the .yarnrc.yml file and stripped out the
comments, which were manually restored but in a way more easily restored
in the future; and its style violated the Prettier style (double-quotes
instead of single-quotes), which was fixed as well.

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,8 +2,9 @@
 # without upstream change, do not let it block the upgrade
 nodeLinker: node-modules
 
+# debug is for https://github.com/esxjs/esx/issues/18
+# rest are for https://github.com/facebook/docusaurus/issues/10645
 packageExtensions:
-  # https://github.com/facebook/docusaurus/issues/10645
   '@docusaurus/theme-common@*':
     dependencies:
       '@docusaurus/plugin-content-docs': '*'
@@ -12,14 +13,11 @@ packageExtensions:
       langium: '*'
     peerDependencies:
       '@docusaurus/theme-common': '*'
-
-  'langium@*':
+  debug@*:
+    dependencies:
+      supports-color: '*'
+  langium@*:
     dependencies:
       '@chevrotain/regexp-to-ast': '*'
       vscode-jsonrpc: '*'
       vscode-languageserver-types: '*'
-
-  # https://github.com/esxjs/esx/issues/18
-  'debug@*':
-    dependencies:
-      supports-color: '*'
