feat: manually revert the rest of 2025 April Fools' Day changes

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 xen0n:
   name: WANG Xuerui
-  title: 🐍蛇口邮轮打杂的
+  title: 🐲龙门客栈打杂的
   url: https://github.com/xen0n
   image_url: https://github.com/xen0n.png
