--- a/src/data/07-distros/loongfire.yml
+++ b/src/data/07-distros/loongfire.yml
@@ -1,10 +1,10 @@
 name: 'LoongFire'
 homepageURL: 'https://www.bpfire.net'
-repoURL: 'https://github.com/vincentmli/BPFire/tree/loongfire'
+repoURL: 'https://github.com/vincentmli/loongfire'
 portingEfforts:
   - authors: ['vincentmli']
-    desc: 'LoongFire is fork of IPFire 2.x, a hardened, versatile, state-of-the-art Open Source firewall based on Linux. LoongFire is to port IPFire to Loongson Loongarch64 architecture. No plan to upstream to IPFire'
-    link: 'https://www.vcn.bc.ca/~vli/bpfire/ipfire-2.29-core190-loongarch64.img.xz'
+    desc: 'LoongFire is a fork of IPFire, a hardened, versatile, state-of-the-art Open Source firewall based on Linux. LoongFire enables revolutionary kernel eBPF technology and runs on Loongson Loongarch64 architecture. No plan to upstream to IPFire'
+    link: 'https://www.bpfire.net/download/loongfire/'
     supportStatus: WaitingRelease
     releasedSinceVersion: ''
     goodSinceVersion: ''
