fix(data): picolibc supportStatus entry
Fixes typo in #342.

Signed-off-by: Jiaxun Yang <jiaxun.yang@flygoat.com>

--- a/src/data/01-toolchain/picolibc.yml
+++ b/src/data/01-toolchain/picolibc.yml
@@ -5,6 +5,6 @@ portingEfforts:
   - authors: ['flygoat']
     desc: ''
     link: 'https://github.com/picolibc/picolibc/pull/898'
-    supportStatus: Release
+    supportStatus: Released
     releasedSinceVersion: '1.8.9'
     quality: OnPar
