--- a/src/data/07-distros/opencloudos-l3.yml
+++ b/src/data/07-distros/opencloudos-l3.yml
@@ -3,4 +3,11 @@ homepageURL: 'https://www.opencloudos.org'
 repoURL: 'https://gitee.com/OpenCloudOS'
 # Press-release materials mention LoongArch but that "port" seems to be
 # "Stream" ("L1" in OpenCloudOS-speak) -only for now.
-portingEfforts: []
+portingEfforts:
+  - authors: []
+    desc: ''
+    link: 'https://mirrors.opencloudos.tech/opencloudos/9.4/isos/loongarch64/'
+    supportStatus: Released
+    releasedSinceVersion: '9.4'
+    goodSinceVersion: '9.4'
+    quality: OnPar
