--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Enable Corepack for Yarn Modern
         run: corepack enable
       - uses: actions/setup-node@v6
-        withg
+        with:
           node-version: 24
           cache: yarn
       - uses: actions/setup-go@v6
